--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>SweetDorama</title>
+<link rel="stylesheet" href = "style.css"></head>
     <body>
         <header>
             <img class="icon" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWhIIIL42ERsIesicMoM4MGQ-z5Lg8n40d-g&s" height="50px"/>
