--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
             <nav>
                 <a href="">Головна</a>
                 <a href="#catalog"> Імена акторів</a>
-                <a href="page2">Дорами</a>
+                <a href="page2.html">Дорами</a>
                 <a href="">Автор сайту</a>
      
             </nav>
