--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
         <header>
             <img class="icon" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWhIIIL42ERsIesicMoM4MGQ-z5Lg8n40d-g&s" height="50px"/>
             <nav>
-                <a href="">Головна</a>
+                <a href="page1">Головна</a>
                 <a href="#catalog"> Імена акторів</a>
                 <a href="">Дорами</a>
                 <a href="">Автор сайту</a>
